--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	</properties>
 
 	<dependencies>
+		<!--	随意引的包	-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
